<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_products">Delete all products</string>
    <string name="action_save">Save</string>
    <string name="action_order_more">Order more</string>
    <string name="action_delete">Delete</string>
    <string name="sale">Sale</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sale_button">Sale button</string>
    <string name="select_image_product">Select Image Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price £</string>
    <string name="quantity">Quantity</string>
    <string name="default_value_quantity">0</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="image_product">Image product</string>
    <string name="get_started_by_adding_a_product">Get started by adding a product</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="fill_in_fields">Please fill in all the fields.</string>
    <string name="new_order">New Order</string>
    <string name="begin_order_message">Please I\'d like to place an order for \</string>
    <string name="end_order_message">\ as soon as possible.</string>
    <string name="zero">0</string>


</resources>
