<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditProductActivity">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:contentDescription="@string/image_product"
            android:id="@+id/image_view_product"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:text="@string/select_image_product"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/product_name" />

            <EditText
                android:id="@+id/edit_text_name"
                style="@style/EditFieldStyle"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/price" />

            <EditText
                android:id="@+id/edit_text_price"
                style="@style/EditFieldStyle"
                android:inputType="number"
                android:maxLength="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/quantity" />

            <ImageButton

                android:id="@+id/image_button_decrease_quantity"
                style="style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@drawable/ic_remove_white" />

            <EditText
                android:id="@+id/edit_text_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/default_value_quantity"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/image_button_increase_quantity"
                style="ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@drawable/ic_add_white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/supplier_name" />

            <EditText
                android:id="@+id/edit_text_supplier_name"
                style="@style/EditFieldStyle"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/supplier_phone" />

            <EditText
                android:id="@+id/edit_text_supplier_phone"
                style="@style/EditFieldStyle"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/supplier_email" />

            <EditText
                android:id="@+id/edit_text_supplier_email"
                style="@style/EditFieldStyle"
                android:inputType="textEmailAddress" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>